webook_go/webook/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      # 你访问的端口
      port: 3308
      # 与 deployment 中的对应
      targetPort: 3306
      # 如果设置了这个 nodePort ,上面的 port 就失效了
      nodePort: 30001
  type: NodePort
