webook_go/webook/k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  # 使用 ClusterIP 这样外部就访问不到
  type: LoadBalancer
  selector:
    app: webook
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
